# parsec

./: .dockerignore  .gitignore  .gitlab-ci.yml  .mcp.json  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  README.md  WORKSHOP_ANALYTICS_PR.md  _typos.toml  bump-version.sh  deploy.sh  docker-compose.yaml  pyproject.toml  requirements.txt  sonar-project.properties
.github/workflows/: ci.yml  publish.yaml
config/: agent_instructions.md  config.local.yaml.template  config.yaml
config/prompts/: aap2_agent.md  babylon_agent.md  cost_agent.md  icinga_agent.md  ocpv_agent.md  orchestrator.md  security_agent.md  shared_context.md  triage_agent.md  workshop_analytics.md
data/: ec2_pricing.json
dockerfiles/: Dockerfile
docs/: ARCHITECTURE.md  CONTRIBUTING.md  NOTES.md  TODO.md  agent-sdk-migration.md  workshop-analytics.md
helm/: .helmignore  Chart.yaml  values-dev.yaml  values.yaml
helm/templates/: NOTES.txt  _helpers.tpl  app-cm-allowed-users.yaml  app-cm-env.yaml  app-configmap.yaml  app-deployment.yaml  app-hpa.yaml  app-pvc.yaml  app-service.yaml  (+22 more)
openshift/: local-config.template.yaml
playbooks/: deploy-mlflow.yaml  deploy.yaml
scripts/: ab_mlflow.py  icinga_eval_set.json  local-server.sh  parity_eval.py  refresh_azure_billing.py  refresh_pricing.py
skills/: .gitkeep
src/: app.py  config.py
static/: app.js  index.html  site.webmanifest  style.css
tests/: test_aap2_debug.py  test_aap2_fix.py  test_aap2_stdout.py  test_agent_runner.py  test_agent_sdk_client.py  test_icinga_sdk.py  test_metrics_collector.py  test_mlflow_connection.py  test_sdk_streaming_history.py  test_sdk_tracing.py  test_shipped_skills.py  test_skills_loader.py
(+147 files in other folders)
